--- a/index.html
+++ b/index.html
@@ -2,8 +2,75 @@
 <html>
   <head>
     <title>Ruane Studios LLC</title>
+
+    <style>
+      html {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        background-color: #262626;
+        padding: 0;
+        margin: 0;
+      }
+
+      body {
+        padding: 0;
+        margin: 0;
+      }
+
+      #content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100vh;
+        background-image: url("background.jpg");
+        background-position: center;
+        background-size: cover;
+
+      }
+
+      #company {
+        display: flex;
+      }
+      #company .title {
+        text-transform: uppercase;
+        color: #f5f5f5;
+        font-size: 26pt;
+        letter-spacing: 6px;
+        font-weight:200;
+        user-select: none;
+      }
+
+      #menu {
+        position: fixed;
+        display: flex;
+        top: 0;
+        left: 0;
+        right: 0;
+        justify-content: space-around;
+        padding: 20px;
+      }
+
+      #menu a {
+        text-decoration: none;
+        color: #f5f5f5;
+        text-transform: uppercase;
+        font-size: 12pt;
+        font-weight: 200;
+      }
+    </style>
   </head>
   <body>
-    Welcome!
+    <div id="content">
+      <div id="company">
+        <span class="title">Ruane Studios</span>
+      </div>
+
+      <!-- <div id="menu">
+        <a href="rspixel">Products</a>
+        <a href="mailto:support@ruanestudios.com">Support</a>
+      </div> -->
+    </div>
+
+    <!-- Original background source image: https://unsplash.com/photos/3cIvvzjE6Lk -->
   </body>
 </html>
