--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         align-items: center;
         width: 100%;
         height: 100vh;
-        background-image: url("background.jpg");
+        background-image: url("images/background.jpg");
         background-position: center;
         background-size: cover;
 
@@ -31,6 +31,7 @@
       #company {
         display: flex;
       }
+
       #company .title {
         text-transform: uppercase;
         color: #f5f5f5;
