Add image paths

--- a/rspixel/index.html
+++ b/rspixel/index.html
@@ -122,7 +122,7 @@
         margin-top: 55px;
         height: 500px;
         width: 100%;
-        background-image: url("images/rspixel-blurred.jpg");
+        background-image: url("/images/rspixel-blurred.jpg");
         background-position: center;
         background-size: cover;
         display: flex;
@@ -222,7 +222,7 @@
   </head>
   <body>
     <div class="header">
-      <img class="logo" src="images/logo-white.png" />
+      <img class="logo" src="/images/logo-white.png" />
       <span class="headerSubtitle">
         Simple image & video editing
       </span>
@@ -508,7 +508,7 @@
 
     <div class="download">
       <a href="https://google.com" target="_blank">
-        <img src="images/download-app-store.png" />
+        <img src="/images/download-app-store.png" />
       </a>
     </div>
 
