Actual RSPixel app store link

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <span class="title">Ruane Studios</span>
       </div>
 
-      <!-- <div id="menu">
+      <div id="menu">
         <a href="rspixel">Products</a>
         <a href="mailto:support@ruanestudios.com">Support</a>
-      </div> -->
+      </div>
     </div>
 
     <!-- Original background source image: https://unsplash.com/photos/3cIvvzjE6Lk -->
