--- a/rspixel/index.html
+++ b/rspixel/index.html
@@ -226,7 +226,7 @@
       <span class="headerSubtitle">
         Simple image & video editing
       </span>
-      <a href="https://google.com" target="_blank">
+      <a href="https://itunes.apple.com/us/app/rspixel/id1458666710?mt=12" target="_blank">
         <svg id="livetype" xmlns="http://www.w3.org/2000/svg" width="156.10054" height="40" viewBox="0 0 156.10054 40">
           <title>Download_on_the_Mac_App_Store_Badge_US-UK_RGB_blk_092917</title>
           <g>
@@ -307,7 +307,7 @@
               <span class="description">
                 Create beautiful background images for your website or presentations in just seconds.
                 <br/><br/>
-                Blur, monochrome, dutone or overlay your images to convert noisy images in to beautiful background images.
+                Blur, monochrome, duotone or overlay your images to convert noisy images in to beautiful background images.
               </span>
             </div>
           </div>
@@ -332,7 +332,7 @@
                 WEBPAGE CAPTURE
               </span>
               <span class="description">
-                Open any URL and RSPixel will take a snapshot of the website, simulating devies such as iPhone®, iPad®, Desktop.
+                Open any URL and RSPixel will take a snapshot of the website, simulating devices such as iPhone®, iPad®, Desktop.
                 <br/><br/>
                 The quickest way to capture a snapshot of your website.
               </span>
@@ -507,7 +507,7 @@
     </div>
 
     <div class="download">
-      <a href="https://google.com" target="_blank">
+      <a href="https://itunes.apple.com/us/app/rspixel/id1458666710?mt=12" target="_blank">
         <img src="../images/download-app-store.png" />
       </a>
     </div>
