Fix product link on privacy page

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -45,7 +45,7 @@
   <body>
     <div id="menu">
       <a href="/">Home</a>
-      <a href="rspixel">Products</a>
+      <a href="/rspixel">Products</a>
       <a href="mailto:support@ruanestudios.com">Support</a>
     </div>
 
