--- a/privacy/index.html
+++ b/privacy/index.html
@@ -55,11 +55,11 @@
       </h1>
       <div>
         <br/>
-        RSPixel does not collect any information on you. We don't know who you are or what you are doing in the app.
+        RuaneStudios does not collect any information on you. We don't know who you are or what you are doing in our apps.
         <br/><br/>
         There are no 3rd party frameworks sending information to Google or Facebook or other data collectors.
         <br/><br/>
-        The app runs completely on your computer and does not interface with any external services.
+        The apps run completely on your computer/phone and do not interface with any external services.
         <br/><br/>
         Enjoy!
       </div>
