--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         background-color: #262626;
         padding: 0;
         margin: 0;
+        height: 100vh;
       }
 
       body {
@@ -35,10 +36,11 @@
       #company .title {
         text-transform: uppercase;
         color: #f5f5f5;
-        font-size: 26pt;
+        font-size: 36pt;
         letter-spacing: 6px;
         font-weight:200;
         user-select: none;
+        margin-top: -100px;
       }
 
       #menu {
@@ -55,7 +57,7 @@
         text-decoration: none;
         color: #f5f5f5;
         text-transform: uppercase;
-        font-size: 12pt;
+        font-size: 18pt;
         font-weight: 200;
       }
     </style>
@@ -67,7 +69,7 @@
       </div>
 
       <div id="menu">
-        <a href="rspixel">Products</a>
+        <a href="/products">Products</a>
         <a href="mailto:support@ruanestudios.com">Support</a>
       </div>
     </div>
